# cpp-project-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_cmake.yml  cmake.yml
cmake/: DependencyGraph.cmake  ProjectConfig_h.cmake  ProjectDependencies.cmake  ProjectOptions.cmake  config.h.in
include/domain/: logger.h
include/infrastructure/sentry/: sentry_logger.h  sentry_proxy.h
include/persistence/: migration-executor.h  migration_executor.h
include/persistence/migration/: migration.h
po/: CMakeLists.txt  en.po  fr.po
src/: CMakeLists.txt  main.cpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/sentry/: sentry_logger.cpp  sentry_proxy.cpp
src/persistence/: CMakeLists.txt  migration-executor.cpp  migration_executor.cpp  persistence.cpp
src/persistence/migration/: 2020-06-27_initial-create.hpp  migration.cpp
test/: CMakeLists.txt
test/infrastructure/: CMakeLists.txt
test/infrastructure/sentry/: sentry_logger_test.cpp  sentry_proxy_mock.hpp
